======================
    ADDED: SHIFT-F3 view dialog.
    ADDED: The internal viewer follow links on HTML pages.
    ADDED: Total Commander like file renaming (two subsequent single clicks on an item)
    ADDED: panel swapping by Ctrl+U
    ADDED: command line improvments: ctrl+/ opens history list, up&down keys work again, and general usability
    ADDED: krusader can now be started from commandline with new options:
           try: krusader --left=/mnt/cdrom --right=ftp://downloads@myserver.net !
    ADDED: new command line widget. should fix some issues and requests
    ADDED: Missing WhatsThis information (thanks to Mikolaj!)
    ADDED: new selection mode (a-la Total Commander) - beta mode! Selected file is colored by the "link" color
    ADDED: a new shortcut for 'show hidden files' - ctrl+. (ctrl plus dot)
    ADDED: rar support to krArc KIO slave.
    ADDED: open with in the right click menu for multiple files with the same mimetype.
    ADDED: Patch by Heiner <h.eichmann_at_gmx.de>  which adds a cancel button to the calculate space action.
    FIXED: run-in-terminal would cause the terminal to close prematuraly and results would be lost.
    FIXED: free disk capacity miscalculation for Ext2 and Ext3 file systems.
    FIXED: crash when editing a file with # in the filename
    FIXED: inplace renaming bug with extention when pressing ctrl+click
    FIXED: whenever the folder gets refreshed, the current file would be lost
    FIXED: problematic behavior when trying to SPACE a folder without permissions
    FIXED: Ctrl-A didn't work properly
    FIXED: crash when unmounting a busy mountpoint
    FIXED: date-time sorting bug
    FIXED: changed pop-up delay of the history button on the command line to zero
    FIXED: right-click menu via keyboard appeared in the wrong place
    FIXED: crash when using spacebar on the ".." (thanks to heiner)
    FIXED: automark directories didn't work (thanks to Anarky)