@@ -1,4 +1,5 @@
 ======================
+    FIXED: internal editor / viewer crash at invalid symlinks
     ADDED: SHIFT-F3 view dialog.
     ADDED: The internal viewer follow links on HTML pages.
     ADDED: Total Commander like file renaming (two subsequent single clicks on an item)
